imagedir      = $(datadir)/pixmaps/blackjack
image_DATA    = blackjack-splash.png \
		chip-100.png \
		chip-25.png \
		chip-5.png \
		chip-1.png \
		baize.png

icondir       = $(datadir)/pixmaps
icon_DATA     = gnome-blackjack.png 

cardslotdir   = $(datadir)/pixmaps/cards/slots/
cardslot_DATA = white-outline.png

EXTRA_DIST    = $(image_DATA) \
		$(icon_DATA) \
		$(cardslot_DATA)

