imagedir      = $(datadir)/pixmaps/blackjack
image_DATA    = blackjack-splash.png \
		chip-100.svg \
		chip-25.svg \
		chip-5.svg \
		chip-1.svg \
		baize.png

icondir       = $(datadir)/icons/hicolor/48x48/apps/
icon_DATA     = gnome-blackjack.png 

cardslotdir   = $(datadir)/pixmaps/cards/slots/
cardslot_DATA = white-outline.svg

EXTRA_DIST    = $(image_DATA) \
		$(icon_DATA) \
		$(cardslot_DATA)

