pixmapdir     = $(datadir)/pixmaps/gnome-stones

pixmap_DATA     = title.png			\
	amoeba.png				\
	boulder.png				\
	butterfly.png				\
	curtain.png				\
	diamond.png				\
	dirt.png				\
	door.png				\
	empty.png				\
	explosion.png				\
	firefly.png				\
	frame.png				\
	gnome.png				\
	wall.png

EXTRA_DIST    = 				\
	$(pixmap_DATA)