pixmapdir= $(datadir)/pixmaps/gnometris
bgdir=$(datadir)/pixmaps/gnometris/bg
appicondir=$(datadir)/pixmaps

pixmap_DATA=\
	7blocks.png \
	5blocks.png \
	5blocks-tim.png \
	5blocks-tig.png \
	7blocks-tig.png \
	7stones-gn.png \
	7stones2-gn.png

appicon_DATA=gnome-gtetris.png

bg_DATA=\
	fishy-bg.jpg \
	greyprint-bg.jpg \
	leaves-bg.jpg \
	sweet-bg.jpg \
	watery-bg.jpg \
	weirdo-bg.jpg \
	vortex-bg.jpg \
	dog-bg.jpg \
	geschier-bg.jpg \
	gitter-bg.jpg \
	gnometris-bg.jpg \
	rhinoceros-bg.jpg \
	scrcow-bg.jpg \
	trees-bg.jpg \
	st-basil-cathedral-bg.jpg

EXTRA_DIST=$(pixmap_DATA) $(appicon_DATA) $(bg_DATA)


