pixmapdir= $(datadir)/pixmaps/gnometris
appicondir=$(datadir)/pixmaps

pixmap_DATA=\
	7blocks.png \
	5blocks.png \
	5blocks-tim.png \
	5blocks-tig.png \
	7blocks-tig.png \
	7stones-gn.png \
	7stones2-gn.png \
	7blocks-gw.png

appicon_DATA=gnome-gtetris.png

EXTRA_DIST=$(pixmap_DATA) $(appicon_DATA)


